style: adding fixed button and spacing sizes

--- a/src/pages/OnboardingScreen/OnboardingScreen.module.css
+++ b/src/pages/OnboardingScreen/OnboardingScreen.module.css
@@ -75,6 +75,7 @@
     line-height: 1.7;
     max-width: 500px;
     margin: 0;
+    min-height: calc(1.1rem * 1.7 * 3);
 }
 
 .footer {
